updated git repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:quillgen/car-controller.git
 [submodule "esp32-agent"]
 	path = esp32-agent
-	url = git@github.com:drriguz/esp32-agent.git
+	url = git@github.com:quillgen/esp32-agent.git
